--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,39 @@ docs/_build/
 # PyBuilder
 target/
 
-#Ipython Notebook
+# Ipython Notebook
 .ipynb_checkpoints
+
+# Virtualenv things.
+bin/activate
+bin/activate.csh
+bin/activate.fish
+bin/activate_this.py
+bin/cygdb
+bin/cython
+bin/cythonize
+bin/easy_install*
+bin/f2py3
+bin/get_env_details
+bin/iptest*
+bin/ipython*
+bin/pip*
+bin/postactivate
+bin/postdeactivate
+bin/preactivate
+bin/predeactivate
+bin/python*
+bin/tensorboard
+bin/theano-cache
+bin/theano-nose
+bin/theano-test
+bin/wheel
+src/package*
+share
+include
+
+
+# Swap files
+*.swp
+
+
